# yaml-reorder

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt  setup.py  yaml_reorder.py
.github/workflows/: ci.yaml
src/yaml_reorder/: __init__.py
tests/: test_yaml_reorder.py
tests/fixtures/: multi_1.yml  multi_2.sql  multi_2.yml  multiline.sql  multiline.yml  simple.sql  simple.yml
tests/fixtures/expected/: simple-expected.yml
